package com.winston.file.buildmodel.factorymethod;

/**
 * @author Winston
 * @date 2022/3/8
 */
public class AppleMilkTea implements BaseProduct {

    @Override
    public void doSomething() {
        System.out.println("苹果奶茶");
    }
}
