package com.winston.file.buildmodel.factorymethod;


/**
 * @author Winston
 * @date 2022/3/8
 */
public interface BaseFactory {

    BaseProduct createProduct();

}
